[package]
name = "hornet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
redis = { version = "0.24.0", features = ["streams", "tokio", "tokio-comp", "connection-manager"] }
hornet-macros = { path = "../hornet-macros" }
tokio = { version = "1.33.*", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
mini-redis = "0.4.1"
rmp = "0.8.12"
quote = "1.0.35"
regex = "1.10.3"
lazy_static = "1.4.0"
glob = "0.3.1"
rmp-serde = "1.1.2"
